--- a/css-style/styles4.css
+++ b/css-style/styles4.css
@@ -94,7 +94,7 @@ main p {
 }
 
 #contact a { 
-    color: #fff;
+    color: #4645a8;
     text-decoration: none;
     font-weight: bold;
     text-align: center;
