--- a/css-style/style.css
+++ b/css-style/style.css
@@ -1,20 +1,60 @@
 
 
-.nav {
-   text-align: center;
-   
-}
+/*class stuff dropdown*/
 
-.nav a{
-    color: yellow
-}
+  .dropdown {
+            position: relative;
+            display: inline-block;
+            font-size: 20px;
+        }
+
+        .dropdown > a {
+            color: #000000;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            padding: 8px;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: rgb(188, 137, 255);
+            box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+            border-radius: 8px;
+            min-width: 160px;
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            display: block;
+            color: black;
+            text-decoration: none;
+            padding: 8px 12px;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        
+
 
 h1 { 
-    margin-bottom: 0%;
+    margin-bottom: 2%;
+    margin-top: 0%;
     text-align: center;
     font-size: 60px;
     font-family: cursive;
-    text-shadow: 0 0 10px yellow;
+    text-shadow: 0 0 10px rgb(255, 123, 0);
+    border: 5px solid white;
+    border-radius: 20px;
+    background-color: rgb(255, 125, 197);
+    padding: 10px;
 }
 h3 { 
     margin-top: 0%;
@@ -34,7 +74,7 @@ font-weight: bold;
 text-shadow: 0 0 6px white;
 }
 body {
-    background-color: rgb(110, 16, 139);
+    background-color: rgb(192, 94, 222);
 }
 main{ 
     color: yellow;
